--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="32dp"
         android:text="@string/enter"
         android:fontFamily="@font/montserrat_medium"
         android:textColor="@color/white"
@@ -107,7 +107,7 @@
                 style="@style/ButtonsTextWeight500"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/enter_with_google"
+                android:text="@string/enter_with_facebook"
                 android:textColor="@color/colorStrongGray"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +139,7 @@
                 style="@style/ButtonsTextWeight500"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/enter_with_google"
+                android:text="@string/enter_with_vk"
                 android:textColor="@color/colorStrongGray"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -156,7 +156,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="34dp"
         android:fontFamily="@font/montserrat_regular"
-        android:foreground="?selectableItemBackground"
         android:text="@string/do_not_have_acc_do_registration"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
