--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16sp"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="38dp"
             android:src="@drawable/ic_back_black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="32dp"
             android:text="@string/settings"
             app:layout_constraintStart_toEndOf="@id/btnBack"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,8 +46,8 @@
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/SmallRegularTextSize14"
                 android:layout_width="wrap_content"
-                android:fontFamily="@font/montserrat_regular"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
                 android:text="@string/txt_name" />
 
             <androidx.appcompat.widget.AppCompatEditText
@@ -55,8 +55,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:fontFamily="@font/montserrat_regular"
                 android:background="@drawable/bg_edittext_stroke"
+                android:fontFamily="@font/montserrat_regular"
                 android:hint="@string/enter_name"
                 android:inputType="text"
                 android:paddingStart="12dp"
@@ -78,10 +78,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edittext_stroke"
+                android:fontFamily="@font/montserrat_regular"
                 android:hint="@string/enter_birth_date"
                 android:inputType="text"
                 android:paddingStart="12dp"
-                android:fontFamily="@font/montserrat_regular"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="14dp" />
@@ -110,9 +110,9 @@
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/SmallRegularTextSize14"
                 android:layout_width="wrap_content"
-                android:fontFamily="@font/montserrat_regular"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:text="@string/city" />
 
             <androidx.appcompat.widget.AppCompatEditText
@@ -121,10 +121,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edittext_stroke"
+                android:fontFamily="@font/montserrat_regular"
                 android:hint="@string/choose_from_list"
                 android:inputType="text"
                 android:paddingStart="12dp"
-                android:fontFamily="@font/montserrat_regular"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="14dp" />
@@ -134,9 +134,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="52dp"
-                android:fontFamily="@font/montserrat_regular"
                 android:background="@drawable/bg_green_button"
                 android:drawableEnd="@drawable/ic_array_right_white"
+                android:fontFamily="@font/montserrat_regular"
                 android:gravity="start|center_vertical"
                 android:paddingStart="12dp"
                 android:paddingEnd="17dp"
@@ -153,11 +153,9 @@
             android:layout_marginTop="188dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="52dp"
-            android:background="@drawable/bg_blue_button"
+            style="@style/PrimaryButton.Full"
             android:text="@string/save_changes"
             android:textAllCaps="false"
-            android:textSize="17sp"
-            android:fontFamily="@font/montserrat_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
