--- a/app/src/main/res/layout/fragment_play_list.xml
+++ b/app/src/main/res/layout/fragment_play_list.xml
@@ -27,6 +27,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:lines="2"
         android:textColor="@color/blackText"
         android:textSize="14sp"
         tools:text="Разнообразный и богатый опыт сложившаяся структура организации играет важную роль в формировании систем массового участия. Товарищи! новая модель организационной деятельности представляет собой интерес" />
