--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -39,9 +39,9 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
             android:elevation="4dp"
+            android:src="@drawable/ic_profile_default"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            tools:src="@color/cardview_dark_background" />
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvLogin"
@@ -354,10 +354,10 @@
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnShow"
+                    style="@style/PrimaryButton.Full"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    style="@style/PrimaryButton.Full"
                     android:text="@string/show_history_by_day" />
             </LinearLayout>
         </LinearLayout>
@@ -394,8 +394,8 @@
                 android:id="@+id/favMeditations"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="16dp"
                 android:orientation="vertical"
                 android:overScrollMode="never"
