--- a/app/src/main/res/layout/item_instrument.xml
+++ b/app/src/main/res/layout/item_instrument.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat_regular"
-        android:textColor="@color/white"
+        android:textColor="@color/blackText"
         android:textSize="13sp"
         android:textStyle="bold" />
 
@@ -29,6 +29,6 @@
         android:ellipsize="end"
         android:fontFamily="@font/montserrat_regular"
         android:lines="2"
-        android:textColor="@color/white"
+        android:textColor="@color/blackText"
         android:textSize="13sp" />
 </androidx.appcompat.widget.LinearLayoutCompat>
