History added. Bug fixes

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -347,7 +347,7 @@
                 android:padding="16dp">
 
                 <CalendarView
-                    android:id="@+id/calendar"
+                    android:id="@+id/calendarView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
