--- a/app/src/main/res/layout/fragment_login_with_email.xml
+++ b/app/src/main/res/layout/fragment_login_with_email.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical"
     tools:context=".ui.authorization.login.LoginWithEmailFragment">
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -30,8 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="70dp"
-            android:text="@string/enter"
             android:fontFamily="@font/montserrat_medium"
+            android:text="@string/enter"
             android:textColor="@color/white"
             android:textSize="@dimen/font_large"
             android:textStyle="bold"
@@ -118,18 +117,16 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/bg_button_onboarding"
                 android:text="@string/enter" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvRegistration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="34dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="@string/do_not_have_acc_do_registration"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvRegistration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="32dp"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="@string/do_not_have_acc_do_registration"
+                android:textColor="@color/white" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
