--- a/app/src/main/res/layout/fragment_challenge_instruments.xml
+++ b/app/src/main/res/layout/fragment_challenge_instruments.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/close"
+        android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -14,7 +14,7 @@
         android:src="@drawable/ic_back_black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+¬
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title"
         style="@style/MainTitle600"
@@ -26,7 +26,7 @@
         android:textColor="@color/blackText"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/close"
+        app:layout_constraintStart_toEndOf="@id/back"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Челлендж" />
 
